--- a/changes.txt
+++ b/changes.txt
@@ -27,6 +27,7 @@ Changes for REDIPS.drag library
        (loop unnecessary went up to the top table top)
 - fixed BUG - when table cell has shrunk, forbidden cell in the last row was lit (example15)
 - added public method row_opacity(el, opacity, color)
+- REDIPS.drag added to the github.com repository https://github.com/dbunic/REDIPS_drag
 
 3.2.1
 - fixing example03: School timetable
