--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,15 @@
 Changes for REDIPS.drag library
 
+4.4.1
+- added example19
+- added public method enable_table()
+- added public method find_parent() - find parent element from start position
+- added public method clone_div() - clones DIV element
+- deleted public method add_events() - not needed any more
+- cloned_id property is no longer exposed as public
+- code optimization
+- code cleaning
+
 4.4.0
 - added support for dynamical creation of table layout (inner table inside DIV element can be moved and accept other DIV elements)
 - added myhandler_cloned_dropped() event handler
