--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,9 @@
 Changes for REDIPS.drag library
 
+4.4.2
+- modified enable_drag() - optional third parameter is changed from 'container' to 'subtree'
+- fixed moving last row from table
+
 4.4.1
 - added example19
 - added public method enable_table()
