--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,8 @@
 Changes for REDIPS.drag library
 
+4.4.3
+- if myhandler_dropped_before() returns false then element drop will be canceled
+
 4.4.2
 - modified enable_drag() - optional third parameter is changed from 'container' to 'subtree'
 - fixed moving last row from table
