--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,11 @@
 Changes for REDIPS.drag library
 
+4.5.1
+- added empty_cell() public method
+- added shift_cells() private method
+- added delete_shifted public property
+- added shift_animation public property
+
 4.5.0
 - added functionality for cloning and deleting table rows
 - added the following event handlers:
