--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,9 @@
 Changes for REDIPS.drag library
 
+4.5.2
+- disable dragging DIV element while animation lasts
+- public method enable_table() now accepts table class name and table reference
+
 4.5.1
 - added empty_cell() public method
 - added shift_cells() private method
