--- a/changes.txt
+++ b/changes.txt
@@ -1,7 +1,7 @@
 Changes for REDIPS.drag library
 
 4.6.7
-- method shift_cells is declared as public
+- method shift_cells() is declared as public
 - fixed bug in case of enable_drag() for newly added DIV element to the table
 
 4.6.6
