--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,9 @@
 Changes for REDIPS.drag library
 
+4.6.10
+- fixed bug for dropped elements in iPad
+  * it seems that Safari Mobile loses registrated events (traditional model) assigned to the DIV element
+
 4.6.9
 - fixed bug in save_content() - DIV elements without "drag" class name are skipped - thanks to CG Developer
 - added parameter REDIPS.drag.save_pname to define parameter name in save_content() method
