--- a/changes.txt
+++ b/changes.txt
@@ -2,6 +2,7 @@ Changes for REDIPS.drag library
 
 4.6.13
 - myhandler_deleted call is moved to the end inside element_deleted method
+- it seemed that find_cell() method was not published as public - now it is
 
 4.6.12
 - added control inside REDIPS.drag.relocate() method - "from" and "to" input parameters should be element nodes
