--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,9 @@
 Changes for REDIPS.drag library
 
+4.6.14
+- added public property REDIPS.drag.autoscroll with default value "true"
+  If set to "false" then autoscroll option will be completely turned off for page and any DIV container with CSS style overflow set to anything but 'visible'
+
 4.6.13
 - myhandler_deleted call is moved to the end inside element_deleted method
 - it seemed that find_cell() method was not published as public - now it is
