--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,10 @@
 Changes for REDIPS.drag library
 
+4.6.15
+- added public property REDIPS.drag.table_sort with default value "true"
+  Table sort is feature where tables inside drop container are sorted on each element click. Sometimes this feature should be turned off when one table overlays the other using "position" style relative, fixed or absolute.
+- added example23 - Shopping cart
+
 4.6.14
 - added public property REDIPS.drag.autoscroll with default value "true"
   If set to "false" then autoscroll option will be completely turned off for page and any DIV container with CSS style overflow set to anything but 'visible'
