--- a/changes.txt
+++ b/changes.txt
@@ -1,14 +1,14 @@
 Changes for REDIPS.drag library
 
 4.6.19
-- added private method "register events", assigning event listener is now in one place
-- fixed bug for Safari Mobile in case of "switch" mode
+- added private method "register events", registering event listener is now in one place
+- fixed bug for Safari Mobile in case of "switch", "switching" and "shift" mode
 
 4.6.18
 - fixing REDIPS.drag.clone_div() method
   * "climitX_Y" class name is removed from cloned DIV element
   * reduced iteration with DOM
--fixed example23 (added regex instead of redips.code_length property)
+- fixed example23 (added regex instead of redips.code_length property)
 
 4.6.17
 - added "clone" and "overwrite" options to the move_object() method
