--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,10 @@
 Changes for REDIPS.drag library
 
+4.6.21
+- when last row is moved from table with move_object() method, it will be marked as "empty_row"
+- if row index for target table in move_object() method is greater then number of rows in target table then moved row will be appended to the table end
+- upgraded example 18 - Simple element animation (row)
+
 4.6.20
 - added public property REDIPS.drag.row_position (property defines position where row will be dropped regarding highlighted row if dropped to other tables - in case of one table, this property doesn't have any effect)
 - redips-drag-min.js is compressed by using Google Closure Compiler
