--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,9 @@
 Changes for REDIPS.drag library
 
+4.7.4
+- added myhandler_final() event handler
+- the color gets ignored in case a row is moved - bug fixed thanks to Rüdiger Kaatz
+
 4.7.3
 - fixed myhandler_dropped_before() in case of "overwrite" drag mode (bottom DIV element was deleted before calling myhandler_dropped_before event handler)  
 
