shift_after is converted to string parameter with options ("always", "delete" and "default")

--- a/changes.txt
+++ b/changes.txt
@@ -5,6 +5,7 @@ Changes for REDIPS.drag library
 - the color gets ignored in case a row is moved - bug fixed thanks to Rüdiger Kaatz
 - added example24
 - redips-drag.js renamed to redips-drag-source.js
+- shift_after is converted to string parameter with options ("always", "delete" and "default")
 
 4.7.3
 - fixed myhandler_dropped_before() in case of "overwrite" drag mode (bottom DIV element was deleted before calling myhandler_dropped_before event handler)  
