- initTables method exposed as public (needed for cases when table is dynamically added or removed) - from now lib uses querySelectorAll for tables and div selection (here is compatibility table http://caniuse.com/queryselector) - enableDrag uses CSS selector

--- a/changes.txt
+++ b/changes.txt
@@ -4,6 +4,9 @@ Changes for REDIPS.drag library
 - big code cleaning
 - majority of properties, methods and event handlers are renamed (camelCase syntax is used)
 - added option to set delete confirmation question (for deleting DIV element and row)
+- initTables method exposed as public (needed for cases when table is dynamically added or removed)
+- from now lib uses querySelectorAll for tables and div selection (here is compatibility table http://caniuse.com/queryselector)
+- enableDrag uses CSS selector 
 
 4.7.6
 - added event handler myhandler_relocated() - event can be triggered after single call of relocate() method or after all DIV elements are shifted in "shift" mode
