--- a/changes.txt
+++ b/changes.txt
@@ -4,6 +4,10 @@ Changes for REDIPS.drag library
 - modified enableDrag - method has option to accept node reference to enable / disable DIV elements inside that node
 - fix inside relocate method (events were registered after DIV element was relocated and that should not be the case)
 - added example26: jQuery dialog
+- event.relocated renamed to event.relocateEnd
+- added event.relocateBefore(div, to) - it's called before each element is relocated
+- added event.relocateAfter(div, to) - it's called after each element is relocated
+- added event.shiftOverflow - called after overflow happen in "shift" drop mode
 
 5.0.3 (2012-12-19)
 - modified emptyCell - now method has option to test target cell and to delete cell content
