--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,8 @@
 Changes for REDIPS.drag library
 
+5.0.8
+- fixed bug (THEAD in table caused error when drag-n-drop table rows) - thanks to James Ostrowick
+
 5.0.7
 - code optimization (reduced number call of getScrollPosition() in boxOffset() method)
 
