--- a/changes.txt
+++ b/changes.txt
@@ -13,6 +13,8 @@ Changes for REDIPS.drag library
 - nolayout class name renamed to redips-nolayout
 - noautoscroll class name renamed to redips-noautoscroll
 - nodrag class name renamed to redips-nodrag
+- in example03 added mysqli API
+- fixed example11
 
 5.0.9 (2014-08-29)
 - fixed bug in findParent() method (problem with skip and search nodes)
