--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,14 @@
 Changes for REDIPS.drag library
 
+5.2.0 (2017-02-06)
+- added ajaxCall() method for making easier AJAX requests
+- example03 changed to use ajaxCall() method
+- example16 changed to use ajaxCall() method
+- example22 changed to use ajaxCall() method
+- example23 changed to use ajaxCall() method
+- example24 changed to use ajaxCall() method
+- code cleaning in examples 3, 16, 22, 23, 24
+
 5.1.0 (2017-01-22)
 - added jsFiddle examples to documentation
 
