--- a/changes.txt
+++ b/changes.txt
@@ -1,9 +1,14 @@
 Changes for REDIPS.drag library
 
-5.2.1 (2017-03-01)
+5.2.2 (2017-04-01)
+- added clearTable() - method deletes all DIV elements with redips-drag class name from table
+- added example28 - Load table content (with AJAX)
+
+5.2.1 (2017-03-08)
 - modified saveContent() - method now sends class names and innerText of DIV elements
 - added loadContent() - method loads table content from server side JSON output
-- added event.loadError(obj) - it's called in case if placing DIV element to the table is not possible (nonexistent table coordinates)
+- added error.loadContent(obj) - it's called in case if placing DIV element to the table is not possible (nonexistent table coordinates)
+- added error.ajax(xhr)
 
 5.2.0 (2017-02-06)
 - added ajaxCall() method for making easier AJAX requests
