--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,10 @@
 Changes for REDIPS.drag library
 
+5.3.0 (2020-03-21)
+- library is checked with ESLint (clearing & optimising)
+- upgraded findParent() method to accept id or class as second parameter
+- added new example - example30
+
 5.2.5 (2018-12-12)
 - enabled loading HTML content to the DIV element in loadContent() method - thanks to Mark Landmann
 
