--- a/changes.txt
+++ b/changes.txt
@@ -1,9 +1,8 @@
 Changes for REDIPS.drag library
 
 5.3.0 (2020-03-21)
-- REDIPS.drag is checked with ESLint (clear & optimise)
-- upgraded findParent() method to accept id or class as second parameter
-- added example29 Move more DIV in column
+- REDIPS.drag is checked with ESLint - cleaning and optimization (deleted some unused variables)
+- added example29 "Move more DIV in column"
 
 5.2.5 (2018-12-12)
 - enabled loading HTML content to the DIV element in loadContent() method - thanks to Mark Landmann
